Fix help text spilling out of the parent

--- a/src/popup/site-form.scss
+++ b/src/popup/site-form.scss
@@ -27,10 +27,14 @@
 
   .field-help {
     font-size: 0.9rem;
-    margin-top: 0.25rem;
+    margin-top: 0;
+    padding-top: 0.25rem;
     padding-left: 1rem;
-    width: 0;
-    min-width: 100%;
+
+    .text {
+      width: 0;
+      min-width: 100%;
+    }
   }
 
   .controls {
